# GoogleTestPractice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MyTest  README.md  TaxCalculator.cpp  TaxCalculator.h  cmake_install.cmake  test.cpp
